{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 32,
  "lineage": "88afe048-559d-8e37-1005-84092729d348",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:security-group/sg-03f5e4789530b56bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f5e4789530b56bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "freshcart-dev-alb",
            "name_prefix": "",
            "owner_id": "699588737174",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "sg-03f5e4789530b56bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:security-group/sg-07a84e17dd023730e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a84e17dd023730e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f5e4789530b56bd"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "freshcart-dev-backend",
            "name_prefix": "",
            "owner_id": "699588737174",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "sg-07a84e17dd023730e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0031da601dd270cad",
            "arn": "arn:aws:ec2:us-east-1:699588737174:elastic-ip/eipalloc-0031da601dd270cad",
            "association_id": "eipassoc-04fbfeb530ea3fa2a",
            "domain": "vpc",
            "id": "eipalloc-0031da601dd270cad",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08e0d7538f34cffe4",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-52-20-18-97.compute-1.amazonaws.com",
            "public_ip": "52.20.18.97",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "freshcart-dev-nat-eip"
            },
            "tags_all": {
              "Name": "freshcart-dev-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "eipalloc-0031da601dd270cad",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:internet-gateway/igw-05e940d559b5f8ced",
            "id": "igw-05e940d559b5f8ced",
            "owner_id": "699588737174",
            "region": "us-east-1",
            "tags": {
              "Name": "freshcart-dev-igw"
            },
            "tags_all": {
              "Name": "freshcart-dev-igw"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "igw-05e940d559b5f8ced",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0031da601dd270cad",
            "association_id": "eipassoc-04fbfeb530ea3fa2a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ae07d31fc325e595",
            "network_interface_id": "eni-08e0d7538f34cffe4",
            "private_ip": "10.0.1.33",
            "public_ip": "52.20.18.97",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eed0d7f471fe94ea",
            "tags": {
              "Name": "freshcart-dev-nat"
            },
            "tags_all": {
              "Name": "freshcart-dev-nat"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "nat-0ae07d31fc325e595",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:route-table/rtb-0c58104f81682c79e",
            "id": "rtb-0c58104f81682c79e",
            "owner_id": "699588737174",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ae07d31fc325e595",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "freshcart-dev-private"
            },
            "tags_all": {
              "Name": "freshcart-dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtb-0c58104f81682c79e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:route-table/rtb-03bd16ed143624ada",
            "id": "rtb-03bd16ed143624ada",
            "owner_id": "699588737174",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e940d559b5f8ced",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "freshcart-dev-public"
            },
            "tags_all": {
              "Name": "freshcart-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtb-03bd16ed143624ada",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9eee166730d2903",
            "region": "us-east-1",
            "route_table_id": "rtb-0c58104f81682c79e",
            "subnet_id": "subnet-08366fbc581aa2942"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtbassoc-0d9eee166730d2903",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a8f2bccfa24f381",
            "region": "us-east-1",
            "route_table_id": "rtb-03bd16ed143624ada",
            "subnet_id": "subnet-0eed0d7f471fe94ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtbassoc-06a8f2bccfa24f381",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b94a683fc951140",
            "region": "us-east-1",
            "route_table_id": "rtb-03bd16ed143624ada",
            "subnet_id": "subnet-0b4d093d70d34e3ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtbassoc-08b94a683fc951140",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:subnet/subnet-08366fbc581aa2942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08366fbc581aa2942",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699588737174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-private"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "subnet-08366fbc581aa2942",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:subnet/subnet-0eed0d7f471fe94ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eed0d7f471fe94ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "699588737174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-public-1"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "subnet-0eed0d7f471fe94ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:subnet/subnet-0b4d093d70d34e3ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d093d70d34e3ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "699588737174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-public-2"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "subnet-0b4d093d70d34e3ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:vpc/vpc-0514d9dd250bc43db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015acfaf6fad6d37d",
            "default_route_table_id": "rtb-03e72b3803b534d08",
            "default_security_group_id": "sg-0e94b33815a8a822c",
            "dhcp_options_id": "dopt-0eeef913be4393d75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0514d9dd250bc43db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e72b3803b534d08",
            "owner_id": "699588737174",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "vpc-0514d9dd250bc43db",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}